nextjs: seatingplan: export dropdown css fix
Set the visibility of the export dropdown menu to hidden by default and visible when toggled on.

--- a/nextjs/src/app/seatingplan/style.module.css
+++ b/nextjs/src/app/seatingplan/style.module.css
@@ -133,6 +133,7 @@
                         opacity: 0;
                         user-select: none;
                         transition: 200ms;
+                        visibility: hidden;
 
                         &.visible {
                             height: auto;
@@ -140,6 +141,7 @@
                             opacity: 1;
                             margin-top: 10px;
                             user-select: all;
+                            visibility: visible;
                         }
 
                         &>.dropdown-item {
